--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':getrequestdemo', ':postrequestdemo', ':imagedownloaddemo'
+include ':app', ':getrequestdemo', ':postrequestdemo', ':imagedownloaddemo', ':apachehttpdemo'
