--- a/androidhttpclient/build.gradle
+++ b/androidhttpclient/build.gradle
@@ -8,8 +8,8 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.apachehttpdemo"
-        minSdkVersion 19
+        applicationId "com.xzy.androidhttp"
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -37,6 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // 引入 apache 依赖库
     implementation 'org.apache:apache:21'
+
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.11'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
