--- a/defaulthttpclient/build.gradle
+++ b/defaulthttpclient/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    // 设置 apache 依赖库
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
 
 
     defaultConfig {
-        applicationId "com.xzy.androidhttp"
+        applicationId "com.xzy.defaulthttpclient"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
@@ -33,4 +35,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // 引入 apache 依赖库
+    implementation 'org.apache:apache:21'
+
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.11'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
