添加解析本地 xml 的module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':javahttp', ':apachehttp', ':androidhttpclient', ':defaulthttpclient'
+include ':javahttp', ':apachehttp', ':androidhttpclient', ':defaulthttpclient', ':parsexml'
