--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':javahttp', ':apachehttp', ':androidhttpclient', ':defaulthttpclient', ':parsexml', ':parsejson', ':fileupload'
+include ':javahttp', ':apachehttp', ':androidhttpclient', ':defaulthttpclient', ':parsexml', ':parsejson', ':fileupload', ':filedownload'
